# ChangeLog for dev-util/smartgit
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Sep 2014; Justin Lecher <jlec@gentoo.org> smartgit-6.0.6.ebuild:
  Enhance description; fix local variable

*smartgit-6.0.6 (28 Sep 2014)

  28 Sep 2014; Justin Lecher <jlec@gentoo.org> -smartgit-1.0.2.ebuild,
  +smartgit-6.0.6.ebuild, metadata.xml:
  Version BUmp

  25 Oct 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Removed no-herd from herd tag in metadata.xml

  25 Jun 2011; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Fixed herd entry in metadata.xml

*smartgit-1.0.2 (10 Jan 2010)

  10 Jan 2010; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -smartgit-1.0.1.ebuild, +smartgit-1.0.2.ebuild:
  Version Bump

*smartgit-1.0.1 (17 Dec 2009)

  17 Dec 2009; Justin Lecher (jlec) <jlec@j-schmitz.net> -smartgit-1.ebuild,
  +smartgit-1.0.1.ebuild:
   version bump to 1.0.1

*smartgit-1 (09 Dec 2009)

  09 Dec 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -smartgit-0_alpha7.ebuild, +smartgit-1.ebuild:
  version bump the release 1

*smartgit-0_alpha7 (13 Nov 2009)

  13 Nov 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -smartgit-0_alpha6.ebuild, +smartgit-0_alpha7.ebuild:
  version bump

*smartgit-0_alpha6 (23 Oct 2009)

  23 Oct 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -smartgit-0_alpha5.ebuild, +smartgit-0_alpha6.ebuild:
  version bump

*smartgit-0_alpha5 (28 Sep 2009)

  28 Sep 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +smartgit-0_alpha5.ebuild, -smartgit-0_alpha4_p3.ebuild:
  version bump

*smartgit-0_alpha4_p3 (20 Sep 2009)

  20 Sep 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -smartgit-0_alpha4.ebuild, +smartgit-0_alpha4_p3.ebuild:
  version bump

*smartgit-0_alpha4 (17 Sep 2009)

  17 Sep 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +smartgit-0_alpha4.ebuild, -smartgit-0_alpha2_p2.ebuild:
  version bump

*smartgit-0_alpha2_p2 (07 Sep 2009)

  07 Sep 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>