@@ -1,1 +1,1 @@
-DIST smartgithg-generic-6_0_6.tar.gz 20508847 SHA256 13e41560138ef18395fbe0bf56d4d29e8614eee004d51d7dd03381080d8426e6 SHA512 62e44d87d17bf22052a1827058b2d34fe39d9746d10d339c9c4a1dc9adf7d6ad2351b35489f31994535a6aaeb38c40d9ab1029fe1f24df36493843102966c529 WHIRLPOOL c99adcaca63c200889c5f55ebdf7719d6e32e840978fd2528904edf13ab22e3ef0dd95903381c336c113413631e8f6fd3cef50c78745826f4c618cac82404b6f
+DIST smartgit-generic-6_5_6.tar.gz 21465255 SHA256 fb479675808d039092b47e52d7d34839df39c90d4d6ff23bf69328cc495c54d2 SHA512 a99dc00abff322e376f557efb45a762c882860bc663df46ae955503c44b56e96b27dfa68d0055198da3c2b8909a221b6b9a3118e2b7109fa4c4c8cce93305c04 WHIRLPOOL b917f05a24c836234c673cd010e839b79b05f39638fcd9da00c60b899597588b67402f45c099c7196d3f76e26533832fc35e3dc8022753e90f1f2d03f294a887
