@@ -1,2 +1,1 @@
-DIST libfac-3-1-0.tar.gz 91544 SHA256 fc3dda08f7ec039635f8d7f1629546f4ac7620a69cf9332ca39e29dd822aee7d
 DIST libfac-3-1-1.tar.gz 90104 SHA256 4c463af2d22375aa62be4fb1f9a32cada6723ca5e3ddbd8a4f5cab72b675e33a
