@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/smartgit
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*smartgit-6.5.6 (13 Feb 2015)
+
+  13 Feb 2015; Luca Molari <molari.luca@gmail.com> +smartgit-6.5.6.ebuild,
+  -smartgit-6.0.6.ebuild:
+  projects/sci: dev-util/smartgit: Version Bump (6.0.6 -> 6.5.6)
 
   28 Sep 2014; Justin Lecher <jlec@gentoo.org> smartgit-6.0.6.ebuild:
   Enhance description; fix local variable
@@ -82,4 +88,3 @@
   28 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   +smartgit-0_alpha1_rc3.ebuild, +metadata.xml:
   Adopted from smartsvn ebuild in sunrise
-
